--- a/work/jsp/06_javascript/WebContent/09_jquery/05_event/test04.html
+++ b/work/jsp/06_javascript/WebContent/09_jquery/05_event/test04.html
@@ -24,7 +24,13 @@
     <p>이벤트 연습</p>
     <div></div>
     <script>
-
+		$("p").click(function(){
+			$("div").append("클립됨<br>")
+		})
+		
+		setInterval(function() {
+			$("p").trigger("click");	
+		}, 1000);
     </script>
 </body>
 </html>
