--- a/work/jsp/06_javascript/WebContent/09_jquery/05_event/test08.html
+++ b/work/jsp/06_javascript/WebContent/09_jquery/05_event/test08.html
@@ -11,7 +11,19 @@
         <textarea cols="70"rows="5"></textarea>
     </div>
     <script>
-
+		$("textarea").keyup(function(){
+			var len = $(this).val().length;
+			$("#countSpan").text(len);
+			
+			if(len > 50)
+			{
+				$("#countSpan").css("color", "red");
+			} else 
+			{
+				$("#countSpan").css("color", "black");
+			
+			}
+		});
     </script>
 </body>
 </html>
