--- a/work/jsp/06_javascript/WebContent/09_jquery/06_effect/test02.html
+++ b/work/jsp/06_javascript/WebContent/09_jquery/06_effect/test02.html
@@ -39,7 +39,19 @@
         <p>애니메이션 효과</p>
     </div>
     <script>
-
+    $("button:eq(0)").click(function(){
+		$("#effDiv").hide(2000);
+	});
+	
+	$("button:eq(1)").click(function(){
+		$("#effDiv").show(2000);
+		
+	});
+	
+	$("button:eq(2)").click(function(){
+		$("#effDiv").toggle(2000);
+		
+	});
     </script>
 </body>
 </html>
