--- a/work/jsp/06_javascript/WebContent/09_jquery/06_effect/test05.html
+++ b/work/jsp/06_javascript/WebContent/09_jquery/06_effect/test05.html
@@ -16,7 +16,11 @@
 <body>
     <div></div>
 	<script>
-
+	$("div").click(	
+		function(){
+			$(this).animate({width : "+=50", height : "+=50"}, "slow");
+		}
+	);
 	</script>    
 </body>
 </html>
