--- a/work/jsp/06_javascript/WebContent/09_jquery/06_effect/test07.html
+++ b/work/jsp/06_javascript/WebContent/09_jquery/06_effect/test07.html
@@ -32,7 +32,32 @@
     <button>finish</button>
     <div></div>
     <script>
-
+		$("button:eq(0)").click(function(){
+			$("div").animate({left : 500}, 2000)
+					.animate({top : 500}, 2000)
+					.animate({width : 300}, 2000);
+			
+		})
+		
+		$("button:eq(1)").click(function(){
+			//$("div").stop();
+			//기본형태
+			//$("div").stop(false, false);
+			//$("div").stop(false, true);
+			//$("div").stop(true, false);
+			$("div").stop(true, true);
+		})
+		
+		$("button:eq(2)").click(function(){
+			$("div").clearQueue();
+			
+		})
+		
+		$("button:eq(3)").click(function(){
+			
+			$("div").finish();
+			
+		})
     </script>
 </body>
 </html>
