--- a/work/jsp/06_javascript/WebContent/09_jquery/05_event/test05.html
+++ b/work/jsp/06_javascript/WebContent/09_jquery/05_event/test05.html
@@ -24,8 +24,12 @@
 <body>
     <p>이벤트 <span>연습</span></p>
     <div></div>
-    <script>
-
+    <script>	
+		$("div").mousedown(function(event){
+			var pos = $(this).offset();
+			console.log(pos.left, pos.top, event.offsetX, event.offsetY,
+					event.clientX, event.clientY);
+		})
     </script>
 </body>
 </html>
