--- a/work/jsp/06_javascript/WebContent/09_jquery/05_event/test07.html
+++ b/work/jsp/06_javascript/WebContent/09_jquery/05_event/test07.html
@@ -17,7 +17,14 @@
         <input type="checkbox" name="ck" value="1" />
     </div>
     <script>
-
+    	$("div#content").on("click", "input:checkbox", function(){
+    		alert($(this).val())
+    	});
+    
+		$("button").click(function(){
+			var len = $("input:checkbox").length + 1;
+			$("#content").append('<input type="checkbox" name="ck" value="'+ len +'" />');
+		});
     </script>
 </body>
 </html>
