--- a/work/jsp/06_javascript/WebContent/09_jquery/05_event/test09.html
+++ b/work/jsp/06_javascript/WebContent/09_jquery/05_event/test09.html
@@ -1,28 +1,46 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
-<style>
-	canvas {
-		position: relative;
-		top: 50px;
-		left: 50px;
-	}
-</style>
-<script src="../js/jquery-3.2.1.js"></script>
+	<meta charset="utf-8">
+	<script src="../js/jquery-3.2.1.js"></script>
 </head>
 <body>
-	<canvas id="canvas" width="700" height="400" 
-	        style="border: 3px solid black"></canvas>
-	        
-	<script>
-
-	</script>        
+	<div id="imglist">
+		<div>
+			<img src="images/pic1.jpg" width="200" height="200" />
+		</div>
+		<div>
+			<img src="images/pic1.jpg" width="200" height="200" />
+		</div>
+		<div>
+			<img src="images/pic1.jpg" width="200" height="200" />
+		</div>
+		<div>
+			<img src="images/pic1.jpg" width="200" height="200" />
+		</div>
+		<div>
+			<img src="images/pic1.jpg" width="200" height="200" />
+		</div>
+	</div>
+    <script>
+		$(window).scroll(function(){
+			console.log($(window).scrollTop(), $(window).height(), $(document).height(), $("#imglist").height());
+			
+			var st = $(window).scrollTop();
+			var wh = $(window).height();
+			var dh = $(document).height()
+			
+			if(st + wh >= dh - 10)
+			{
+				for(var i = 0; i < 5; i++)
+				{
+					$("div#imglist").append($("div#imglist > div:first-child").clone());
+				}
+			}
+		});
+    </script>
 </body>
 </html>
-
-
 
 
 
