--- a/work/jsp/06_javascript/WebContent/09_jquery/06_effect/test06.html
+++ b/work/jsp/06_javascript/WebContent/09_jquery/06_effect/test06.html
@@ -27,7 +27,14 @@
     <button>클릭</button>	
     <div></div>
     <script>
-
+		$("button").click(function(){
+			$("div").animate({left : "+=100"}, 1000)
+					.animate({width : "+=100"}, 1000)
+					.animate({height : "+=100"}, 1000)
+					.animate({height : "-=100"}, 1000)
+					.animate({width : "-=100"}, 1000)
+					.animate({left : "-=100"}, 1000);
+		})
     </script>
 </body>
 </html>
