--- a/work/jsp/06_javascript/WebContent/09_jquery/09_ajaxfile/test01.html
+++ b/work/jsp/06_javascript/WebContent/09_jquery/09_ajaxfile/test01.html
@@ -7,7 +7,7 @@
 <script src="../js/jquery.form.js"></script> 
 </head>
 <body>
-	<form id="ajaxForm" action="/09_jquery/ajaxfile/exam01"
+	<form id="ajaxForm" action="/06_javascript/jquery/ajaxfile/test01"
 	      method="post"
 	      enctype="multipart/form-data">
 		<input type="text" name="msg" /><br>
@@ -15,6 +15,19 @@
 		<button>업로드</button>	      
 	</form>
 	<script>
+		$("#ajaxForm").ajaxForm({
+			beforeSubmit: function(){
+				alert("서브밋 전 호출");
+			},
+			sucess: function(responseText){
+				
+				alert("업로드 성공");
+			},
+			error: function(){
+				alert("업로드시 에러발생");
+			}
+		});
+	
 	</script>
 </body>
 </html>
