--- a/work/jsp/06_javascript/WebContent/09_jquery/08_ajax/test05.html
+++ b/work/jsp/06_javascript/WebContent/09_jquery/08_ajax/test05.html
@@ -14,6 +14,50 @@
 	<button>호출</button>
 	<div id="result"></div>
 	<script>
+		function waitEffect()
+		{
+			$('body').waitMe({
+				//none, rotateplane, stretch, orbit, roundBounce, win8,
+				//win8_linear, ios, facebook, rotation, timer, pulse,
+				//progressBar, bouncePulse or img
+				effect: 'bouncePulse',
+				//place text under the effect (string).
+				text: '처리중입니다',
+
+				//background for container (string).
+				bg: 'rgba(255,255,255,0.7)',
+
+				//color for background animation and text (string).
+				color: '#000',
+
+				//max size
+				maxSize: '',
+
+				//wait time im ms to close
+				waitTime: -1,
+
+				//url to image
+				source: '',
+
+				//or 'horizontal'
+				textPos: 'vertical',
+
+				//font size
+				fontSize: '',
+
+			});
+			
+			
+			
+			setTimeout(function(){
+				$("body").waitMe("hide");
+			}, 2000)
+		}
+	
+	
+		$("button").click(function(){
+			waitEffect();
+		})
 	</script>
 </body>
 </html>
