--- a/work/jsp/06_javascript/WebContent/09_jquery/10_ajaxcors/test02.html
+++ b/work/jsp/06_javascript/WebContent/09_jquery/10_ajaxcors/test02.html
@@ -13,6 +13,15 @@
 	<button>요청</button>
 	<div id="result"></div>
 	<script>
+		$("button").click(function(){
+			console.log("location.origin : ", location.origin)
+			$.ajax({
+				url: "/06_javascript/crossdomain/test02"
+			})
+			.done(function(data){
+				$("#result").html(data);
+			});
+		})
 	</script>
 </body>
 </html>
