--- a/work/jsp/06_javascript/WebContent/09_jquery/10_ajaxcors/test04-1.html
+++ b/work/jsp/06_javascript/WebContent/09_jquery/10_ajaxcors/test04-1.html
@@ -1,6 +1,6 @@
 <!-- 
 	해결책 3.
-	jsonp(json padding) 활용하기
+	jsonp(json with padding) 활용하기
 	- script 태그를 이용해 자바스크립트 파일을 요청하는 것은 
 	  SOP(Same Oring Policy)의 영향을 받지 않는 것을 이용 
  -->
@@ -15,7 +15,15 @@
 	<button>요청</button>
 	<div id="result"></div>
 	<script>
+		function cb(msg)
+		{
+			$("#result").html(msg);
+		}
+		
 	</script>
+	
+	<script src="http://localhost:9080/lec06_apiserver/crossdomain/test04"></script>
+	
 </body>
 </html>
 
