--- a/work/jsp/06_javascript/WebContent/09_jquery/10_ajaxcors/test04-3.html
+++ b/work/jsp/06_javascript/WebContent/09_jquery/10_ajaxcors/test04-3.html
@@ -15,6 +15,28 @@
 	<button>요청</button>
 	<div id="result"></div>
 	<script>
+		function test(msg)
+		{
+			$("#result").html(msg);
+		}
+		
+		$("button").click(function(){	
+			//첫번째 방법
+			/* $.getScript("http://localhost:9080/lec06_apiserver/crossdomain/test04?callback=test") */
+			
+			//두번째 방법
+			$.ajax({
+				url: "http://localhost:9080/lec06_apiserver/crossdomain/test04",
+				type: "GET",
+				dataType: "jsonp",
+				jsonp: "callback",
+				success: function(msg)
+				{
+					$("#result").html(msg);
+				}
+			})
+		})
+	
 	</script>
 </body>
 </html>
